<resources>
    <string name="app_name">IMC!</string>
    <string name="hello_world">Olá Mundo!</string>
    <string name="hi_radio">olá radiobutton</string>
    <string name="hi_checkbox">olá checkbox</string>
    <string name="calcular">Calcular</string>
    <string name="imc">imc</string>
    <string name="peso_hint">Peso (ex: 65.8)</string>
    <string name="hint_altura">Altura (ex: 1.88)</string>
</resources>